# shr

./: CMakeLists.txt  README.md  config.h  identity.h  logger.cxx  logger.h  messaging.h  network.cxx  peers.cxx  shr.tar.xz  transfer.cxx
include/: crypto.h  database.h  network.h  peers.h  transfer.h  types.h  utils.h
src/: config.cxx  crypto.cxx  database.cxx  identity.cxx  main.cxx  messaging.cxx  utils.cxx
